@@ -3,6 +3,7 @@
 
        NEW: Bookmarks.
        NEW: FM RDS decoder using gr-rds.
+       NEW: Frequency tooltips on the FFT area.
      FIXED: Prevent crash due to device errors while starting the application.
   IMPROVED: Fractional PPM correction.
 
